# Bioinformatics

./: README.md
Chapter-1/Experiment_1-1-1/: Cargo.toml
Chapter-1/Experiment_1-1-1/src/: main.rs
Chapter-1/Experiment_1-1-2/: Cargo.toml
Chapter-1/Experiment_1-1-2/src/: main.rs
Chapter-1/Experiment_1-1-3/: Cargo.toml
Chapter-1/Experiment_1-1-3/src/: main.rs
Chapter-1/Experiment_1-1-4/: Cargo.toml
Chapter-1/Experiment_1-1-4/src/: main.rs
Chapter-2/Experiment_2-2-1/: Cargo.toml
Chapter-2/Experiment_2-3-1/: Cargo.toml
Chapter-2/Experiment_2-3-1/src/: main.rs
Chapter-3/Experiment_3-1-1/: Cargo.toml
Chapter-3/Experiment_3-1-1/src/: main.rs
Chapter-3/Experiment_3-1-2/: Cargo.toml
Chapter-3/Experiment_3-1-2/src/: main.rs
Chapter-3/Experiment_3-1-3/: Cargo.toml
Chapter-3/Experiment_3-1-4/: Cargo.toml
Chapter-3/Experiment_3-1-5/: Cargo.toml
Chapter-3/Experiment_3-1-6/: Cargo.toml
Chapter-3/Experiment_3-6-1/: Cargo.toml
Chapter-3/Experiment_3-6-2/: Cargo.toml
Chapter-4/Experiment_4-1-1/: Cargo.toml  mrf_results.txt  pipeline.nf  pwm_results.txt  synthetic_expression_data.txt
Chapter-4/Experiment_4-3-1/: Cargo.toml
Chapter-4/Experiment_4-3-2/: Cargo.toml
Chapter-4/Experiment_4-8-1/: Cargo.toml  integrated.json
Chapter-5/Experiment_5-7-1/: Cargo.toml
Chapter-5/Experiment_5-8-1/: Cargo.toml
Chapter-5/Experiment_5-9-1/: Cargo.toml
Chapter-6/Experiment_6-1-1/: Cargo.toml
Chapter-6/Experiment_6-7-1/: Cargo.toml
Chapter-6/Experiment_6-7-1/src/: main.nf  main.rs
Chapter-6/Experiment_6-8-1/: Cargo.toml
(+25 files in other folders)
