[package]
name = "Experiment_6-7-1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"               
clap = { version = "4.0", features = ["derive"] }   
env_logger = "0.10"          
log = "0.4"                   
rayon = "1.5"                 
rust-htslib = "0.39.0"       
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"  